RDLParser.java
// Generated from RDL.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DATA=1, LOAD=2, CSV=3, LSM=4, LAYER=5, TORCH=6, CONNECT=7, WEIGHT=8, SIMULATE=9, 
		WITH=10, SAVE=11, SPIKE=12, IF=13, EMIT=14, SIZE=15, TYPE=16, STEPS=17, 
		ARROW=18, ASSIGN=19, PLUS_ASSIGN=20, MINUS_ASSIGN=21, MUL_ASSIGN=22, DIV_ASSIGN=23, 
		GT=24, LT=25, GTE=26, LTE=27, EQ=28, NEQ=29, PLUS=30, MINUS=31, INCREMENT=32, 
		MUL=33, DIV=34, LPAREN=35, RPAREN=36, COMMA=37, LBRACE=38, RBRACE=39, 
		ID=40, INT=41, FLOAT=42, STRING=43, LINE_COMMENT=44, HASH_COMMENT=45, 
		MINUS_COMMENT=46, BLOCK_COMMENT=47, WS=48;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_dataDecl = 2, RULE_lsmDecl = 3, 
		RULE_layerDecl = 4, RULE_connectStmt = 5, RULE_simulateStmt = 6, RULE_saveStmt = 7, 
		RULE_block = 8, RULE_blockStatement = 9, RULE_methodDecl = 10, RULE_methodName = 11, 
		RULE_paramList = 12, RULE_spikeDecl = 13, RULE_ifStmt = 14, RULE_emitStmt = 15, 
		RULE_assignment = 16, RULE_augmentedAssignment = 17, RULE_incrementStmt = 18, 
		RULE_sizeStmt = 19, RULE_typeStmt = 20, RULE_stepsStmt = 21, RULE_typeValue = 22, 
		RULE_expr = 23, RULE_comparisonExpr = 24, RULE_additiveExpr = 25, RULE_multiplicativeExpr = 26, 
		RULE_unaryExpr = 27, RULE_primary = 28, RULE_number = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "dataDecl", "lsmDecl", "layerDecl", "connectStmt", 
			"simulateStmt", "saveStmt", "block", "blockStatement", "methodDecl", 
			"methodName", "paramList", "spikeDecl", "ifStmt", "emitStmt", "assignment", 
			"augmentedAssignment", "incrementStmt", "sizeStmt", "typeStmt", "stepsStmt", 
			"typeValue", "expr", "comparisonExpr", "additiveExpr", "multiplicativeExpr", 
			"unaryExpr", "primary", "number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'data'", "'load'", "'csv'", "'LSM'", "'layer'", "'torch'", "'connect'", 
			"'weight'", "'simulate'", "'with'", "'save'", "'spike'", "'if'", "'emit'", 
			"'size'", "'type'", "'steps'", "'->'", "'='", "'+='", "'-='", "'*='", 
			"'/='", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'+'", "'-'", "'++'", 
			"'*'", "'/'", "'('", "')'", "','", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DATA", "LOAD", "CSV", "LSM", "LAYER", "TORCH", "CONNECT", "WEIGHT", 
			"SIMULATE", "WITH", "SAVE", "SPIKE", "IF", "EMIT", "SIZE", "TYPE", "STEPS", 
			"ARROW", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
			"GT", "LT", "GTE", "LTE", "EQ", "NEQ", "PLUS", "MINUS", "INCREMENT", 
			"MUL", "DIV", "LPAREN", "RPAREN", "COMMA", "LBRACE", "RBRACE", "ID", 
			"INT", "FLOAT", "STRING", "LINE_COMMENT", "HASH_COMMENT", "MINUS_COMMENT", 
			"BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RDL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RDLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATA) | (1L << LSM) | (1L << LAYER) | (1L << CONNECT) | (1L << SIMULATE) | (1L << SAVE))) != 0)) {
				{
				{
				setState(60);
				statement();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public DataDeclContext dataDecl() {
			return getRuleContext(DataDeclContext.class,0);
		}
		public LsmDeclContext lsmDecl() {
			return getRuleContext(LsmDeclContext.class,0);
		}
		public LayerDeclContext layerDecl() {
			return getRuleContext(LayerDeclContext.class,0);
		}
		public ConnectStmtContext connectStmt() {
			return getRuleContext(ConnectStmtContext.class,0);
		}
		public SimulateStmtContext simulateStmt() {
			return getRuleContext(SimulateStmtContext.class,0);
		}
		public SaveStmtContext saveStmt() {
			return getRuleContext(SaveStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DATA:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				dataDecl();
				}
				break;
			case LSM:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				lsmDecl();
				}
				break;
			case LAYER:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				layerDecl();
				}
				break;
			case CONNECT:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				connectStmt();
				}
				break;
			case SIMULATE:
				enterOuterAlt(_localctx, 5);
				{
				setState(72);
				simulateStmt();
				}
				break;
			case SAVE:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				saveStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataDeclContext extends ParserRuleContext {
		public TerminalNode DATA() { return getToken(RDLParser.DATA, 0); }
		public TerminalNode ID() { return getToken(RDLParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(RDLParser.ASSIGN, 0); }
		public TerminalNode LOAD() { return getToken(RDLParser.LOAD, 0); }
		public TerminalNode CSV() { return getToken(RDLParser.CSV, 0); }
		public TerminalNode STRING() { return getToken(RDLParser.STRING, 0); }
		public DataDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterDataDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitDataDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitDataDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataDeclContext dataDecl() throws RecognitionException {
		DataDeclContext _localctx = new DataDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dataDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(DATA);
			setState(77);
			match(ID);
			setState(78);
			match(ASSIGN);
			setState(79);
			match(LOAD);
			setState(80);
			match(CSV);
			setState(81);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LsmDeclContext extends ParserRuleContext {
		public TerminalNode LSM() { return getToken(RDLParser.LSM, 0); }
		public TerminalNode ID() { return getToken(RDLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public LsmDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lsmDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterLsmDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitLsmDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitLsmDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LsmDeclContext lsmDecl() throws RecognitionException {
		LsmDeclContext _localctx = new LsmDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lsmDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(LSM);
			setState(84);
			match(ID);
			setState(85);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayerDeclContext extends ParserRuleContext {
		public TerminalNode LAYER() { return getToken(RDLParser.LAYER, 0); }
		public TerminalNode ID() { return getToken(RDLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode TORCH() { return getToken(RDLParser.TORCH, 0); }
		public LayerDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layerDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterLayerDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitLayerDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitLayerDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayerDeclContext layerDecl() throws RecognitionException {
		LayerDeclContext _localctx = new LayerDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_layerDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(LAYER);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TORCH) {
				{
				setState(88);
				match(TORCH);
				}
			}

			setState(91);
			match(ID);
			setState(92);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConnectStmtContext extends ParserRuleContext {
		public TerminalNode CONNECT() { return getToken(RDLParser.CONNECT, 0); }
		public List<TerminalNode> ID() { return getTokens(RDLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RDLParser.ID, i);
		}
		public TerminalNode ARROW() { return getToken(RDLParser.ARROW, 0); }
		public TerminalNode WEIGHT() { return getToken(RDLParser.WEIGHT, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public ConnectStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connectStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterConnectStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitConnectStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitConnectStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConnectStmtContext connectStmt() throws RecognitionException {
		ConnectStmtContext _localctx = new ConnectStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_connectStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(CONNECT);
			setState(95);
			match(ID);
			setState(96);
			match(ARROW);
			setState(97);
			match(ID);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WEIGHT) {
				{
				setState(98);
				match(WEIGHT);
				setState(99);
				number();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimulateStmtContext extends ParserRuleContext {
		public TerminalNode SIMULATE() { return getToken(RDLParser.SIMULATE, 0); }
		public TerminalNode WITH() { return getToken(RDLParser.WITH, 0); }
		public TerminalNode ID() { return getToken(RDLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public SimulateStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simulateStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterSimulateStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitSimulateStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitSimulateStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimulateStmtContext simulateStmt() throws RecognitionException {
		SimulateStmtContext _localctx = new SimulateStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simulateStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(SIMULATE);
			setState(103);
			match(WITH);
			setState(104);
			match(ID);
			setState(105);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SaveStmtContext extends ParserRuleContext {
		public TerminalNode SAVE() { return getToken(RDLParser.SAVE, 0); }
		public TerminalNode ID() { return getToken(RDLParser.ID, 0); }
		public SaveStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_saveStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterSaveStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitSaveStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitSaveStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SaveStmtContext saveStmt() throws RecognitionException {
		SaveStmtContext _localctx = new SaveStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_saveStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(SAVE);
			setState(108);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(RDLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(RDLParser.RBRACE, 0); }
		public List<BlockStatementContext> blockStatement() {
			return getRuleContexts(BlockStatementContext.class);
		}
		public BlockStatementContext blockStatement(int i) {
			return getRuleContext(BlockStatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(LBRACE);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SPIKE) | (1L << IF) | (1L << EMIT) | (1L << SIZE) | (1L << TYPE) | (1L << STEPS) | (1L << ID))) != 0)) {
				{
				{
				setState(111);
				blockStatement();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementContext extends ParserRuleContext {
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public SpikeDeclContext spikeDecl() {
			return getRuleContext(SpikeDeclContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public EmitStmtContext emitStmt() {
			return getRuleContext(EmitStmtContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AugmentedAssignmentContext augmentedAssignment() {
			return getRuleContext(AugmentedAssignmentContext.class,0);
		}
		public IncrementStmtContext incrementStmt() {
			return getRuleContext(IncrementStmtContext.class,0);
		}
		public SizeStmtContext sizeStmt() {
			return getRuleContext(SizeStmtContext.class,0);
		}
		public TypeStmtContext typeStmt() {
			return getRuleContext(TypeStmtContext.class,0);
		}
		public StepsStmtContext stepsStmt() {
			return getRuleContext(StepsStmtContext.class,0);
		}
		public BlockStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterBlockStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitBlockStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitBlockStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockStatementContext blockStatement() throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_blockStatement);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				methodDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				spikeDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				ifStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				emitStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				assignment();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(124);
				augmentedAssignment();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(125);
				incrementStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(126);
				sizeStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(127);
				typeStmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(128);
				stepsStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public MethodNameContext methodName() {
			return getRuleContext(MethodNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(RDLParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(RDLParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitMethodDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_methodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			methodName();
			setState(132);
			match(LPAREN);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(133);
				paramList();
				}
			}

			setState(136);
			match(RPAREN);
			setState(137);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RDLParser.ID, 0); }
		public TerminalNode SPIKE() { return getToken(RDLParser.SPIKE, 0); }
		public MethodNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).enterMethodName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDLListener ) ((RDLListener)listener).exitMethodName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RDLVisitor ) return ((RDLVisitor<? extends T>)visitor).visitMethodName(this);
			else return visitor.visitChildren(this);
		}
	}
